fix(style): input border and message wrap

--- a/components/Message/index.module.scss
+++ b/components/Message/index.module.scss
@@ -40,6 +40,8 @@
   right: 0;
   left: 0;
   z-index: 999;
+  user-select: none;
+  pointer-events: none;
 }
 
 .rotate {
